my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: my-ingress
   annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: |
      location /admin {
         deny all;
         return 403 "Go your own way, Stalker!";
      }
spec:
   rules:
      - host: "arch.homework"
        http:
           paths: 
              - path: /health
                pathType: Prefix
                backend:
                   service:
                      name: my-service
                      port: 
                         number: 8000
